Backport 7ca0ae94159ac0fd2df23ee1a1e8cf626ce31048